# docstamp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  fabfile.py  requirements.txt  setup.cfg  setup.py  tox.ini
badges_app/: Dockerfile  README.md  analyze_csv_and_svg.py  generate_badges.py  main.py  merge_badges_into_pdf.py  requirements.txt
badges_app/static/: styles.css
badges_app/templates/: base.html  error.html  index.html
docstamp/: collections.py  commands.py  config.py  data_source.py  file_utils.py  filenames.py  gdrive.py  inkscape.py  model.py  pdf_utils.py  pdflatex.py  qrcode.py  svg_fonts.py  svg_utils.py  template.py  unicode_csv.py  vcard.py  version.py  xml_utils.py
docstamp/cli/: cli.py  utils.py
scripts/: docstamp  embed_font_to_svg.py  stampy  svg_export.py
stampy/: collections.py  data_source.py  template.py  unicode_csv.py
tests/: test_badge.py  test_certificate.py  test_people.py
