[bumpversion]
current_version = 0.4.4
commit = True
tag = False
message = :bookmark: Bump version: {current_version} → {new_version}

[metadata]
name = docstamp
version = attr: docstamp.version.__version__
description = A SVG and LateX template renderer from table data based on Inkscape and Jinja2
long_description = file: README.md
long_description_content_type = text/markdown
project_urls = 
	Documentation = https://github.com/PythonSanSebastian/docstamp/blob/master/README.md
	Source Code = https://github.com/PythonSanSebastian/docstamp
	Bug Tracker = https://github.com/PythonSanSebastian/docstamp/issues
	Changelog = https://github.com/PythonSanSebastian/docstamp/blob/master/CHANGELOG.md
author = Alexandre M. Savio
author_email = info@pyss.org
license = Apache License Version 2.0
license-file = LICENSE
keywords = 
	svg
	latex
	template
	jinja2
	inkscape
	badge
	document
	render
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
setup_requires = 
	wheel
	setuptools
install_requires = 
	Pillow>=6.1.0
	jinja2>=2.10
	PyPDF2>=1.26.0
	qrcode>=6.1
	svgutils==0.3.1
	click>=7.0
scripts = 
	scripts/svg_export.py
	scripts/embed_font_to_svg.py

[entry_points]
console_scripts = 
	docstamp = docstamp.cli:cli

[flake8]
max-line-length = 120
max-complexity = 10
select = C,E,F,W,B,B950
ignore = E501,E126

[isort]
multi_line_output = 3
include_trailing_comma = True
use_parentheses = True
force_single_line = False
indent = 4
line_length = 120
wrap_length = 60
not_skip = __init__.py
length_sort = True
known_first_party = lambda_handlers
known_third_party = pytest,marshmallow,jsonschema
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[mypy]
python_version = 3.7
ignore_missing_imports = True
warn_unused_configs = True

[tox:tox]
envlist = 
	lint,
	isort,
	mypy,
skipsdist = True

[testenv]
basepython = python3
whitelist_externals = make
deps = 
	lint: flake8
	lint: flake8-bugbear
	isort: isort
	mypy: mypy
passenv = 
	CI = 1
setenv = 
	PYTHONPATH = {toxinidir}:{toxinidir}
	TESTING = True
commands = 
	lint: flake8 docstamp
	isort: isort -c -rc docstamp
	mypy: mypy docstamp

[bdist_wheel]
universal = 1

[bumpversion:file:docstamp/version.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

